changed syntax highlighting

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
     "name": "nellext",
     "displayName": "nellext",
     "description": "language support for nell",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/ArianDannemann/nellext"
+    },
     "version": "0.0.1",
     "engines": {
         "vscode": "^1.66.0"
